// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/AwardWinningSection Default 1`] = `
<div
  className="sc-iCoGMd hCXBKv"
>
  <div
    className="sc-fujyAs dxAwRg container"
  >
    <div
      className="sc-pNWdM VClJg"
    >
      <h1
        className="sc-jSFjdj ivKUHz bolder"
      >
        Award winning
      </h1>
      <h1
        className="sc-jSFjdj ivKUHz"
      >
        The best restaurants near you!
      </h1>
      <button
        className="sc-hKFxyN dBrWFX sc-gKAaRy jqhQHF"
        type="button"
      >
        Explore best restaurants
      </button>
    </div>
    <div
      className="sc-jrsJWt lfxfVl"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Badge Default 1`] = `
<div
  className="sc-kEqXSa dSHOqc"
>
  <span
    className="sc-eCApnc kBsqG"
    fontWeight="regular"
    size="S"
  >
    Hamburgers
  </span>
</div>
`;

exports[`Storyshots Components/Button Default 1`] = `
<button
  className="sc-hKFxyN dBrWFX"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Components/Category Default 1`] = `
<figure
  className="sc-ksluID idXKKL"
>
  <img
    alt="restaurant category"
    className="sc-hBMUJo kXgFvC"
    src="https://images.pexels.com/photos/2147491/pexels-photo-2147491.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=550"
  />
  <figcaption
    className="sc-fFSPTT jYBKoc"
  >
    <span
      className="sc-eCApnc doZAyy"
      fontWeight="regular"
      size=""
    >
      Pizza
    </span>
  </figcaption>
</figure>
`;

exports[`Storyshots Components/CategoryList Default 1`] = `
<div
  className="sc-iemWCZ ffXSKB"
>
  <a
    href="/categories/pizza"
    onClick={[Function]}
  >
    <figure
      className="sc-ksluID idXKKL"
    >
      <img
        alt="restaurant category"
        className="sc-hBMUJo kXgFvC"
        src="https://images.pexels.com/photos/2147491/pexels-photo-2147491.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=550"
      />
      <figcaption
        className="sc-fFSPTT jYBKoc"
      >
        <span
          className="sc-eCApnc doZAyy"
          fontWeight="regular"
          size=""
        >
          Pizza
        </span>
      </figcaption>
    </figure>
  </a>
  <a
    href="/categories/burgers"
    onClick={[Function]}
  >
    <figure
      className="sc-ksluID idXKKL"
    >
      <img
        alt="restaurant category"
        className="sc-hBMUJo kXgFvC"
        src="https://images.pexels.com/photos/2233351/pexels-photo-2233351.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=550"
      />
      <figcaption
        className="sc-fFSPTT jYBKoc"
      >
        <span
          className="sc-eCApnc doZAyy"
          fontWeight="regular"
          size=""
        >
          Burgers
        </span>
      </figcaption>
    </figure>
  </a>
  <a
    href="/categories/desserts"
    onClick={[Function]}
  >
    <figure
      className="sc-ksluID idXKKL"
    >
      <img
        alt="restaurant category"
        className="sc-hBMUJo kXgFvC"
        src="https://images.pexels.com/photos/1343465/pexels-photo-1343465.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=550"
      />
      <figcaption
        className="sc-fFSPTT jYBKoc"
      >
        <span
          className="sc-eCApnc doZAyy"
          fontWeight="regular"
          size=""
        >
          Desserts
        </span>
      </figcaption>
    </figure>
  </a>
  <a
    href="/categories/comfort-food"
    onClick={[Function]}
  >
    <figure
      className="sc-ksluID idXKKL"
    >
      <img
        alt="restaurant category"
        className="sc-hBMUJo kXgFvC"
        src="https://images.pexels.com/photos/1199960/pexels-photo-1199960.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=550"
      />
      <figcaption
        className="sc-fFSPTT jYBKoc"
      >
        <span
          className="sc-eCApnc doZAyy"
          fontWeight="regular"
          size=""
        >
          Comfort food
        </span>
      </figcaption>
    </figure>
  </a>
  <a
    href="/categories/sushi"
    onClick={[Function]}
  >
    <figure
      className="sc-ksluID idXKKL"
    >
      <img
        alt="restaurant category"
        className="sc-hBMUJo kXgFvC"
        src="https://images.pexels.com/photos/9210/food-japanese-food-photography-sushi.jpg?auto=compress&cs=tinysrgb&dpr=2&h=550"
      />
      <figcaption
        className="sc-fFSPTT jYBKoc"
      >
        <span
          className="sc-eCApnc doZAyy"
          fontWeight="regular"
          size=""
        >
          Sushi
        </span>
      </figcaption>
    </figure>
  </a>
  <a
    href="/categories/asian"
    onClick={[Function]}
  >
    <figure
      className="sc-ksluID idXKKL"
    >
      <img
        alt="restaurant category"
        className="sc-hBMUJo kXgFvC"
        src="https://images.pexels.com/photos/1234535/pexels-photo-1234535.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=550"
      />
      <figcaption
        className="sc-fFSPTT jYBKoc"
      >
        <span
          className="sc-eCApnc doZAyy"
          fontWeight="regular"
          size=""
        >
          Asian
        </span>
      </figcaption>
    </figure>
  </a>
</div>
`;

exports[`Storyshots Components/ErrorSection Default 1`] = `
<div
  className="sc-dIvrsQ eMwhWg"
>
  <h2
    className="sc-jSFjdj hDhCWM"
  >
    This is not the food you’re looking for.
  </h2>
  <div
    className="sc-hHEiqL jvYlfI"
  >
    <img
      alt="no restaurants found"
      src="sushi.svg"
    />
  </div>
  <p
    className="sc-eCApnc doZAyy"
    fontWeight="regular"
    size=""
  >
    There seems that there are no restaurants in this category yet. Try to come back later?
  </p>
  <button
    className="sc-hKFxyN dBrWFX"
    type="button"
  >
    See all restaurants
  </button>
</div>
`;

exports[`Storyshots Components/FoodItem Default 1`] = `
<div
  className="sc-dlMDgC gqcGbA"
>
  <div>
    <h4
      className="sc-jSFjdj bRxpEV"
    >
      Food
    </h4>
    <p
      className="sc-eCApnc doZAyy sc-fKgJPI fsssks"
      fontWeight="regular"
      size=""
    >
      nice stuff
    </p>
    <p
      className="sc-eCApnc doZAyy sc-bCwfaz jMfXGY"
      fontWeight="regular"
      size=""
    >
      €7.50
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Footer Default 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="sc-giAqHp cBenhg"
    >
      <div
        className="container"
      >
        <div
          className="sc-ezzafa bSqPGp"
        >
          <div
            className="sc-lmgQwP ePkncm"
          >
            <svg
              className="sc-cxNHIi vfjVB"
              fill="none"
              viewBox="0 0 23 20"
            >
              <path
                className="logo--face-left"
                d="M11.74 19.1662L6.66566 14.0788L0.82428 11.0619L1.76834 4.49574L0.82428 0.029541L11.74 2.1887V19.1662Z"
                fill="#61D8DE"
              />
              <path
                className="logo--face-right"
                d="M11.74 19.1366L16.8143 14.0493L22.6557 11.0619L21.7116 4.49574L22.6557 0.029541L11.74 2.1887V19.1366Z"
                fill="#4CC8C0"
              />
              <path
                className="logo--ear-bottom-right"
                d="M22.6262 10.8549L14.4246 2.72113L22.6262 0L21.7411 4.61408L22.6262 10.8549Z"
                fill="#36C1BF"
              />
              <path
                className="logo--ear-bottom-left"
                d="M0.883118 10.8549L9.11415 2.69155L0.883118 0L1.79768 4.61408L0.883118 10.8549Z"
                fill="#36C1BF"
              />
              <path
                className="logo--ear-top-right"
                d="M21.7115 4.55497C21.564 4.58455 14.454 2.78033 14.454 2.78033L22.5671 0.0592041L21.7115 4.55497Z"
                fill="#22ACA7"
              />
              <path
                className="logo--ear-top-left"
                d="M1.79794 4.58452C1.94545 4.6141 9.05541 2.80987 9.05541 2.80987L0.942383 0.0887451L1.79794 4.58452Z"
                fill="#22ACA7"
              />
              <path
                className="logo--nose"
                d="M13.3626 17.5394L11.74 16.4451L10.1174 17.5394L11.74 19.1366L13.3626 17.5394Z"
                fill="#B1DCE3"
              />
            </svg>
          </div>
          <div
            className="sc-iwajpm gZENaV"
          >
            <h2
              className="sc-jSFjdj hDhCWM"
            >
              Discover us
            </h2>
            <ul>
              <li>
                <p
                  className="sc-eCApnc doZAyy"
                  fontWeight="regular"
                  size=""
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    Home
                  </a>
                </p>
              </li>
              <li>
                <p
                  className="sc-eCApnc doZAyy"
                  fontWeight="regular"
                  size=""
                >
                  <a
                    href="/categories"
                    onClick={[Function]}
                  >
                    Categories
                  </a>
                </p>
              </li>
              <li>
                <p
                  className="sc-eCApnc doZAyy"
                  fontWeight="regular"
                  size=""
                >
                  <a
                    href="/about"
                    onClick={[Function]}
                  >
                    About
                  </a>
                </p>
              </li>
              <li>
                <p
                  className="sc-eCApnc doZAyy"
                  fontWeight="regular"
                  size=""
                >
                  <a
                    href="/login"
                    onClick={[Function]}
                  >
                    Login
                  </a>
                </p>
              </li>
            </ul>
          </div>
          <div
            className="sc-iwajpm gZENaV"
          >
            <h2
              className="sc-jSFjdj hDhCWM"
            >
              Our social media
            </h2>
            <ul>
              <li>
                <p
                  className="sc-eCApnc doZAyy"
                  fontWeight="regular"
                  size=""
                >
                  <a
                    href="https://facebook.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Facebook
                  </a>
                </p>
              </li>
              <li>
                <p
                  className="sc-eCApnc doZAyy"
                  fontWeight="regular"
                  size=""
                >
                  <a
                    href="https://instagram.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Instagram
                  </a>
                </p>
              </li>
              <li>
                <p
                  className="sc-eCApnc doZAyy"
                  fontWeight="regular"
                  size=""
                >
                  <a
                    href="https://twitter.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Twitter
                  </a>
                </p>
              </li>
            </ul>
          </div>
          <div
            className="sc-iwajpm gZENaV"
          >
            <h2
              className="sc-jSFjdj hDhCWM"
            >
              Check our apps
            </h2>
            <div
              className="footer-bottom"
            >
              <img
                alt="app store link"
                src="https://www.pete-app.com/wp-content/themes/PETE/style/public/images/downloadIos.png"
                style={
                  Object {
                    "marginBottom": "0.5rem",
                    "width": "120px",
                  }
                }
              />
              <img
                alt="google play link"
                src="https://help.richmondelt.com/hc/article_attachments/115008811623/android-app-store-latest.png"
                style={
                  Object {
                    "width": "120px",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Form/Input Default 1`] = `
<div
  className="sc-oeezt iCAOnw"
>
  <input
    aria-label="input"
    type="text"
  />
  
</div>
`;

exports[`Storyshots Components/Form/Select Default 1`] = `
<div
  className="sc-bBjRSN bwAhFO"
>
  <select
    aria-label="food"
    id="select"
    onChange={[Function]}
    value=""
  >
    <option
      value="Burger"
    >
      Burger
    </option>
    <option
      value="Pizza"
    >
      Pizza
    </option>
    <option
      value="Sushi"
    >
      Sushi
    </option>
  </select>
  
</div>
`;

exports[`Storyshots Components/IconButton Default 1`] = `
<button
  aria-label="forward"
  className="sc-kLojOw cLcIrK"
  type="button"
>
  <svg
    className="sc-gtsrHT kjSAgk"
    height={24}
    stroke="#202020"
    style={
      Object {
        "minWidth": 24,
      }
    }
    width={24}
  >
    <use
      xlinkHref="sprite-map.svg#arrow-right"
    />
  </svg>
</button>
`;

exports[`Storyshots Components/PageSection Default 1`] = `
<div
  className="sc-iklJeh jGqxnm container-desktop"
>
  <div
    className="sc-jJMGnK hzfjLk"
  >
    <h2
      className="sc-jSFjdj hDhCWM"
    >
      Asian
    </h2>
  </div>
  <h1>
    Hello Dummy Content Baby
  </h1>
</div>
`;

exports[`Storyshots Components/RestaurantCard Default 1`] = `
<div
  className="sc-gXfVKN krIgcZ"
  data-testid="restaurant-card"
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <img
      alt="restaurant"
      className="sc-carFqZ fuOqcJ"
      loading="lazy"
      src="https://images.unsplash.com/photo-1572802419224-296b0aeee0d9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1003&q=20"
    />
  </div>
  <div
    className="sc-cBoqAE bzdxCC"
  >
    <h2
      className="sc-jSFjdj hDhCWM sc-efHYUO ahcX"
    >
      Burger King
       
    </h2>
    <div
      className="sc-hiKfDv bsEQeH"
    >
      <span
        className="sc-eCApnc kBsqG review-text"
        fontWeight="regular"
        size="S"
      >
        ★ 4.2 Excellent
      </span>
    </div>
    <p
      className="sc-eCApnc doZAyy sc-iTVJFM jCwJep"
      fontWeight="regular"
      size=""
    >
      Nicest place for burgers
    </p>
    <div
      className="sc-kEqXSa dSHOqc sc-iBzEeX lduuxR"
    >
      <span
        className="sc-eCApnc kBsqG"
        fontWeight="regular"
        size="S"
      >
        comfort-food
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/StepIndicator Default 1`] = `
<div
  style={
    Object {
      "marginBottom": "2rem",
    }
  }
>
  <div
    className="sc-hmbstg krtXce"
  >
    <h4
      className="sc-jSFjdj bRxpEV"
    >
      Step
    </h4>
    <span
      className="sc-eCApnc ifSLnI"
      fontWeight="regular"
      size="XS"
    >
      Step 
      1
       of 
      4
    </span>
  </div>
  <div
    className="sc-amiJK eunkUd"
  >
    <div
      className="sc-jOFryr jluEJg"
    />
  </div>
</div>
`;

exports[`Storyshots Components/TopBanner Default 1`] = `
<div
  className="sc-eJocfa eEgZWS"
>
  <h1
    className="sc-jSFjdj ivKUHz sc-jffHpj jViEbu"
  >
    Categories
  </h1>
</div>
`;

exports[`Storyshots Components/Typography/Body Default 1`] = `
<div>
  <p
    className="sc-eCApnc doZAyy"
    fontWeight="regular"
    size=""
  >
    Body
  </p>
  <p
    className="sc-eCApnc kBsqG"
    fontWeight="regular"
    size="S"
  >
    Body S
  </p>
  <p
    className="sc-eCApnc ifSLnI"
    fontWeight="regular"
    size="XS"
  >
    Body XS
  </p>
  <p
    className="sc-eCApnc hihCZU"
    fontWeight="regular"
    size="XXS"
  >
    Body XXS
  </p>
</div>
`;

exports[`Storyshots Components/Typography/Heading Default 1`] = `
<div>
  <h1
    className="sc-jSFjdj ivKUHz"
  >
    Heading 1
  </h1>
  <h2
    className="sc-jSFjdj hDhCWM"
  >
    Heading 2
  </h2>
  <h3
    className="sc-jSFjdj gHpcGb"
  >
    Heading 3
  </h3>
  <h4
    className="sc-jSFjdj bRxpEV"
  >
    Heading 4
  </h4>
</div>
`;
